assets/css/text.css
/*
 * Text styles
 */

@font-face {
  font-family: inkubio;
  src: url("../fonts/estyle.woff");
}

@font-face {
  font-family: coves;
  src: url("../fonts/coves.woff");
}

@font-face {
  font-family: opensans;
  src: url("../fonts/opensans.woff");
}

@font-face {
  font-family: opensans-bold;
  src: url("../fonts/opensans-bold.woff");
}


.estyle {
  font-family: inkubio;
  font-size: 37px;
  color: #FFF;
  text-decoration: none;
  padding: 0;
  padding-left: 20px;
  margin-bottom:-15px;

}

h1 {
  margin: 0;
  font-family: inkubio;
  font-size: 8em;
  font-weight: normal;
  color:rgb(255, 255, 255);
  text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
}

h2 {
  margin: 0;
  font-family: coves;
  font-size: 2em;
  letter-spacing: 4px;
  color:rgb(255, 255, 255);
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
  text-transform: uppercase;
}

h3 {
  margin: 5px;
  padding: 5px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1.5em;
  font-weight: normal;
  color: #555;
}

h4 {
  font-size: 1.2em;
}

h5 {
  font-size: 1em;
  word-wrap: break-word;
}

.title-text {
    position: relative;
    margin-top: 20vh;
    margin-bottom: 20vh;
}

.paragraph-text {
  padding: 30px;
  font-size: 20px;
  color: #555;
}

.ingress-text {
  font-size: 30px;
  color: #bbb;
}

.error404 {
  font-family: "Helvetica Neue";
  font-size: 8em;
  color: #333;
}

.committee-title {
  margin: 90px 0 40px 0;
  font-family: coves;
  font-size: 2.5em;
  color: #444;
  text-transform: uppercase;
}

.position-title {
  font-family: opensans-bold;
  font-size: 1em;
  color: #444;
  text-transform: uppercase;
}

.position-text {
  font-family: opensans;
  font-size: 1em;
  color: #333;
}

/* Officials page text overflow fix */
@media (max-width: 1350px) and (min-width: 1200px) {
  .position-title, .position-text {
    font-size: 0.8em;
  }
}

@media (max-width: 1200px) {
  .committee-title {
    font-size: 2em;
  }
}

.content-container a, #page a {
  color: rgb(68, 187, 133);
}

